# bayes-n-gaffer

./: README.md  pyproject.toml  run_pipeline.py
conf/: config.yaml
conf/experiment/: default.yaml
notebooks/: alpha_fpl_colab.ipynb
src/: __init__.py
src/backtest/: __init__.py  runner.py
src/data/: __init__.py  backcast.py  features.py  ingest.py  mappings.py
src/models/: __init__.py  copula.py  numpyro_model.py  xmins_model.py
src/optimization/: __init__.py  constraints.py  gurobi_solver.py  objective.py
tools/: generate_map.py
